--- a/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
+++ b/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
@@ -1,5 +1,9 @@
 /* Object Details Flyout Styles */
 
+.object-panel-dockable {
+  --dockable-panel-top-offset: var(--app-content-top);
+}
+
 .object-panel {
   position: absolute;
   top: 0;
