--- a/frontend/styles/tokens/spacing.css
+++ b/frontend/styles/tokens/spacing.css
@@ -1,6 +1,8 @@
 :root {
   /* Layout heights */
   --app-header-height: 39px;
+  --cluster-tabs-height: 0px;
+  --app-content-top: calc(var(--app-header-height) + var(--cluster-tabs-height));
 
   /* Spacing scale */
   --spacing-xs: 0.25rem;
